--- a/faq.html
+++ b/faq.html
@@ -628,7 +628,7 @@ p { margin: 0; }
 
 </center>
 <br>
-over time, the internet has been changing ... the blogs became unpopular, forums too, msn died, orkut died ... very sad, right ? ;-;<br>
+over time, the internet has been changing ... the blogs became unpopular, forums too, msn died, orkut died ... very sad, right ? ;;<br>
 i then looked for substitutes for the things i liked : i tried using facebook to replace orkut, but no one else cared about the glittery cute things and i was disappointed.<br>
 i started using tumblr, which was well customizable and could fill the void that blogs left behind. it worked, even if it took a long time to find an aesthetic that would make me really happy, so i did several blogs until i got to my recent one ( it was during this time that i created the name middlepot ).<br>
 my recent one, was done together with a friend of mine, who also made with me the not bad fb page, which should have the same aesthetics. but she and i had very different opinions of what we wanted to do and she'd post things that i didn't like, both on the tumblr and on the page ... it became a mess, and we ended up giving up doing it together. i'd like to talk more about it in another post, because it's a tricky subject ; ;<br>
@@ -639,7 +639,8 @@ i don't use any social media in a very personal way because these are just for s
 it was hard deciding what i should do, i'm used to the more open and customizable format the old internet had... tumblr is the place where i most adapted, but i still don't use it to post personal content.<br>
 to replace the forums, i found other places on the internet where i could communicate with various types of people, where i always remain anonymous as usual.<br>
 to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. line in my opinion resembles quite a lot of things, besides having super cute stickers and themes !!<br>
-i also decided to try out discord because of friends, who use it a lot.. it remembers me of the oldschool group chats, so i like it.. !<br>
+i also decided to try out discord because of friends, who use it a lot.. it reminds me of the oldschool group chats, so i like it.. !<br>
+now line is my fav chatting app,, while discord is my fav for group chat, specifically.<br>
 <br>
 but in spite of having some social media accs, other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
 so i did it, and here i am ♡ . * ･ ｡<br>
