--- a/about.html
+++ b/about.html
@@ -304,7 +304,8 @@ z-index: 3;
 <div id="spoiler1" class="spoiler-area is-closed">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="200" height="auto" src="https://i.imgur.com/UOAG1Oi.png"/>
+<img width="180" height="auto" src="https://i.imgur.com/smoPDcy.png"/>　
+<img width="180" height="auto" src="https://i.imgur.com/M6mxDX6.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
