--- a/fashion.html
+++ b/fashion.html
@@ -452,7 +452,7 @@ p { margin: 0; }
 <font color="#bca6a0"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub>　( these pictures are temporary )　<sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <br><br>
 
-<img width="200px" height="auto" src="https://i.imgur.com/G6YYew2.png"/><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/rIpeKyr.png"/><br><br>
 <br>
 
 
