--- a/faq.html
+++ b/faq.html
@@ -422,7 +422,7 @@ it is possible to be pure, innocent, happy and comfy even as an adult.. and i'm 
 <br>
 　do i age regress ? am i part of a community ? am i in a relationship with a "caregiver" ?<br>
 <br>
-　ణ　well, i don't think i really age regress because i don't enter a "mind space", but i do have lots of "small" personality traits & interests like coloring and making pillowforts.. it makes my heart soft ♡<br>
+　ణ　well, i don't think i really age regress because i don't enter a "mind space", but i do have lots of "small" personality traits & interests.. it makes my heart soft, it's part of who i am and i believe i should embrace it ♡<br>
 　ణ　as i don't age regress, i am not part of any community,, but i identify with babycore and age regression blogs because it always make me feel so comfy & soft ! i always keep following this kind of content.<br>
 　ణ　i consider bubu ( my love ) my caregiver in some way, because he takes good care of me since i'm very sensitive and get anxious about complicated "adult stuff", he always helps me a lot, keep me safe and i love him so much !!! ♡<br>
 　ణ　i recently realized.. i am a platonic caregiver ! i love taking care of others, but it's not in a romantic way.. so it's different from what bubu is for me. i also don't enter any kind of "mind space" in this case !<br>
