--- a/links.html
+++ b/links.html
@@ -328,6 +328,7 @@ z-index: 3;
 <div style="position:relative; float:right; right:7%;">
 <sub><sub><img src="https://i.imgur.com/SYSp3iZ.png"></sub></sub><font color="#ddcbc1"> for friends :</font><br>
 <br>
+　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/tFcjcNMxEz" target="_blank" >♡</a><br>
 　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >♡</a><br>
 </div>
 
