--- a/gaming.html
+++ b/gaming.html
@@ -871,7 +871,7 @@ p { margin: 0; }
 <div id="spoiler1-0" class="spoiler-area is-closed1-0">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img src="https://i.imgur.com/Iihj9yu.png"/></center><br>
+<center><img src="https://i.imgur.com/Aq7u7eU.png"/></center><br>
 <font style="color:#af8c8c; font-size:10px; line-height:13px;">
 　　　　　　　　　　　name : <font style="font-size:11px">♡</font> woof <font style="font-size:11px">♡</font><br>
 　　　　　　　　　　　bday : 03.26.19<br>
@@ -1475,6 +1475,10 @@ p { margin: 0; }
 <br>
 <br><br>
 <div style="padding-left:20px">
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.blueskygames.clicker" target="_blank">lutie rpg</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.AngelaHe.TheresThisGirl" target="_blank">there's this girl</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=air.jp.globalgear.jwl" target="_blank">ホウセキの樹　-完全無料で遊べる癒され放置ゲーム</a><br><br>
+<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.cuticlenyanco.magicalgirl" target="_blank">魔法少女クリティカル～異世界と役立たずの初期魔法～</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.pulsmo.StrayCatDoors" target="_blank">stray cat doors</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.wooga.sumikko_jp" target="_blank">sumikko gurashi</a><br><br>
 <a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.seyeonsoft.pastel" target="_blank">pastel girl</a><br><br>
