--- a/status.html
+++ b/status.html
@@ -312,7 +312,7 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">sleepy</font> <img src="https://i.imgur.com/ypx4RDE.gif">
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">tiny</font> <img src="https://i.imgur.com/Up4IT8p.gif">
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/ncZFpWGgfJPjZUHH7"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -322,6 +322,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>03.09.19</sup></font> <font color="#bea5ce">→</font>　waa don't leave me behind !!!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>25.07.19</sup></font> <font color="#c48d8d">→</font>　my love magic will heal you ♡
 
 <br><br><br>
@@ -347,9 +350,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>02.08.19</sup></font> <font color="#d8abab">→</font>　light hearted , softer.
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>01.11.19</sup></font> <font color="#bea5ce">→</font>　i have loooots to learn yet..
 
 
 
