--- a/commissions.html
+++ b/commissions.html
@@ -354,7 +354,8 @@ all this freedom is a bit confusing if you're not used to dealing with codes, so
 　　　　　･ <a href="https://cute.home.kg/ii" target="_blank"><font color="#ddca7e">honey morning</font></a><br>
 　　　　　･ <a href="https://cute.home.kg/iii" target="_blank"><font color="#ad9593">midnight angel</font></a><br>
 　　　　　･ <a href="https://cute.home.kg/iv" target="_blank"><font color="#b1c0d8">happy dreams</font></a><br>
-　　　　　･ <a href="https://cute.home.kg/v" target="_blank"><font color="#ba3434">strawberry valentine</font></a>
+　　　　　･ <a href="https://cute.home.kg/v" target="_blank"><font color="#ba3434">strawberry valentine</font></a><br>
+　　　　　･ <a href="https://cute.home.kg/vi" target="_blank"><font color="#838a70">fairy garden</font></a>
 
 <br><br><br>
 these are just some collage examples of the aesthetics i'm used to. my website represents the first aesthetic, but it could be made visually in infinite ways ; i can make it more simple or even focused in a specific character / series !
