--- a/portfolio.html
+++ b/portfolio.html
@@ -313,6 +313,67 @@ z-index: 3;
 <br><br><font color="#ad9783">( this is a compilation of the best of my works )</font><br><br><br><br><br>
 
 <img src="https://i.imgur.com/NC62NZP.gif">
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/yZDQncB.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/KICsPiP.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/4t3RoGq.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/DWF38dg.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/eMPybHB.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> ascii art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img src="https://i.imgur.com/R7ay7fJ.png"><br><br>
+<img src="https://i.imgur.com/3ZpoYKJ.png"><br><br>
+<img src="https://i.imgur.com/R3XEkvO.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="140px" height="140px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/FfbpbN1.png">
+<br><br><img width="140px" height="140px" src="https://i.imgur.com/lVueesw.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/CpIBdRW.jpg">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="220px" height="auto" src="https://i.imgur.com/lG5a4mE.png"><br><br>
+<img width="230px" height="auto" src="https://i.imgur.com/DClWDQW.png"><br><br>
+<img width="225px" height="auto" src="https://i.imgur.com/aE93YhS.png"><br><br>
+<img width="240px" height="auto" src="https://i.imgur.com/rjfSOYJ.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/GiKjvPj.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/z2TL82e.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/15tyof.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/i06o5b.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
@@ -321,6 +382,35 @@ z-index: 3;
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="300px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<object width="300" height="300"><param value="https://files.catbox.moe/8oq43k.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/8oq43k.swf"></embed></object>
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img src="https://i.imgur.com/VkyeSzb.gif"> <img src="https://i.imgur.com/fwrhemF.gif"> <img src="https://i.imgur.com/yIxCUeJ.gif"> <img src="https://i.imgur.com/4RWxo8a.gif"><br><br>
+<img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
+<img src="https://i.imgur.com/bvAiMrD.gif"> <img src="https://i.imgur.com/7mKu6kW.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
@@ -332,51 +422,34 @@ z-index: 3;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<object width="300" height="300"><param value="https://files.catbox.moe/8oq43k.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/8oq43k.swf"></embed></object>
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/dQayP38.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/4t3RoGq.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/N6W0DT9.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> blog and website materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img src="https://i.imgur.com/KH3Qcj9.gif"> <img src="https://i.imgur.com/BafUAvl.gif"><br><br><img src="https://i.imgur.com/r6PF4ve.gif"><br><br><img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
-<img src="https://i.imgur.com/bvAiMrD.gif"> <img src="https://i.imgur.com/7mKu6kW.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="300px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> singing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/l8kn8o.mp3" target="_blank" id="linkzinhoinho">secret base .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/pEvgVlJ.gif"><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/wowZaeP.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="250px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/AjepqtE.png">
+<br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/YRj5yhd.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> fonts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <a href="https://files.catbox.moe/6npeac.rar" target="_blank"><img src="https://i.imgur.com/KjGQcfl.png"></a><br><br>
@@ -385,88 +458,10 @@ z-index: 3;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/x6fx8wy.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/1INK0sD.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="210px" height="auto" src="https://i.imgur.com/GO3s3jt.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/3DYwstF.png"><br><br>
-<img width="190px" height="auto" src="https://i.imgur.com/RLaGdnI.png"><br><br>
-<img width="210px" height="auto" src="https://i.imgur.com/rfuPtQy.png"><br><br>
-<img width="190px" height="auto" src="https://i.imgur.com/oG4tngO.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> outfit ideas<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="200px" height="auto" src="https://i.imgur.com/ZnFkF3q.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/AOFhc1d.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/kSge0vK.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/gV1kkrp.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/o8JOLOa.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pixel art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img src="https://i.imgur.com/izF44hd.gif"> <img src="https://i.imgur.com/0g0nBYV.gif">　<img src="https://i.imgur.com/4JtDFWu.gif"> <img src="https://i.imgur.com/WM81e9r.gif">　<img src="https://i.imgur.com/XfdewVz.gif">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/vVwho2a.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> ascii art<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img src="https://i.imgur.com/3ZpoYKJ.png">
-<br><br><img src="https://i.imgur.com/R3XEkvO.png">
-<br><br><img src="https://i.imgur.com/R7ay7fJ.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="250px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
-<br><br>
-　　<img width="220px" height="auto" src="https://i.imgur.com/DuXGkuR.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="140px" height="140px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/FfbpbN1.png">
-<br><br><img width="140px" height="140px" src="https://i.imgur.com/lVueesw.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/CpIBdRW.jpg">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
-
-
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> remix<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/odxwd1.mp3" target="_blank" id="linkzinhoinho">lolitabot's great trip .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
