--- a/archive.html
+++ b/archive.html
@@ -4453,23 +4453,28 @@ p { margin: 0; }
 
 </center>
 <br>
-over time, the internet has been changing ... the blogs became unpopular, forums too, msn died, orkut died ... very sad, right ? ;-;<br>
+over time, the internet has been changing ... the blogs became unpopular, forums too, msn died, orkut died ... very sad, right ? ;;<br>
 i then looked for substitutes for the things i liked : i tried using facebook to replace orkut, but no one else cared about the glittery cute things and i was disappointed.<br>
 i started using tumblr, which was well customizable and could fill the void that blogs left behind. it worked, even if it took a long time to find an aesthetic that would make me really happy, so i did several blogs until i got to my recent one ( it was during this time that i created the name middlepot ).<br>
 my recent one, was done together with a friend of mine, who also made with me the not bad fb page, which should have the same aesthetics. but she and i had very different opinions of what we wanted to do and she'd post things that i didn't like, both on the tumblr and on the page ... it became a mess, and we ended up giving up doing it together. i'd like to talk more about it in another post, because it's a tricky subject ; ;<br>
-anyway, i deleted her posts from tumblr and facebook, and then i got to what it is today : a safe and comfy place !<br>
-the fb pages have similar content, which i get on tumblr. in this way, fb pages are extensions of my main tumblr, a way to bring content to people who don't know it.<br>
-fb itself, i did not like to use as a social media. i also tried using instagram, but bad things happened and i gave up on it too. i'm used to the more open and customizable format the old internet had, so the tumblr was the place where i most adapted.<br>
+anyway, i deleted her posts from tumblr and facebook, and then i got to my actual project : safety & comfort !<br>
+i no longer use fb and decided to continue the project by keeping just the necessary accounts, separately :<br>
+tumblr is my place to post images in original quality ; youtube is my place to make playlists ; twitter is my place to post ascii art ; instagram is my place to post interactive content .<br>
+i don't use any social media in a very personal way because these are just for sharing content to inspire and make people smile with positivity !<br>
+it was hard deciding what i should do, i'm used to the more open and customizable format the old internet had... tumblr is the place where i most adapted, but i still don't use it to post personal content.<br>
 to replace the forums, i found other places on the internet where i could communicate with various types of people, where i always remain anonymous as usual.<br>
 to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. line in my opinion resembles quite a lot of things, besides having super cute stickers and themes !!<br>
+i also decided to try out discord because of friends, who use it a lot.. it reminds me of the oldschool group chats, so i like it.. !<br>
+now line is my fav chatting app,, while discord is my fav for group chat, specifically.<br>
 <br>
-but in spite of having tumblr ( and fb pages ), other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
+but in spite of having some social media accs, other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
 so i did it, and here i am ♡ . * ･ ｡<br>
 the 7 y/o me would be really proud of everything i'm doing right now. this website is really my favorite place on internet !<br>
 it's all i wanted, here i can put together all the projects i do and all the content i like.<br>
+sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts for reaching them ..<br>
 <br>
 <br>
-i hope this answers a few things about how i got here ! <img src="https://i.imgur.com/gQeft9B.gif"/><br>
+i hope this answers a few things about how i got here !<img src="https://i.imgur.com/gQeft9B.gif"/><br>
 and i wrote a lot, i hope it's not tiring to read ; ;<br>
 <br>
 <center><img width="200" height="auto" src="https://i.imgur.com/VsxcJFL.gif"/></center><br>
@@ -4581,7 +4586,15 @@ since it's very complicated, this took a while to think about :<br>
 <br><br>
 <center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
 <br><br>
-age play, ddlg / cgl, there is a fine line between pedophilia and those kinks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
+do i age regress ? am i part of a community ? am i in a relationship with a "caregiver" ?<br>
+<br>
+　ణ　well, i don't think i really age regress because i don't enter a "mind space", but i do have lots of "small" personality traits & interests.. it makes my heart soft, it's part of who i am and i believe i should embrace it ♡<br>
+　ణ　as i don't age regress, i am not part of any community,, but i identify with babycore and age regression blogs because it always make me feel so comfy & soft ! i always keep following this kind of content.<br>
+　ణ　i consider bubu ( my love ) my caregiver in some way, because he takes good care of me since i'm very sensitive and get anxious about complicated "adult stuff", he always helps me a lot, keep me safe and i love him so much !!! ♡<br>
+　ణ　i recently realized.. i am a platonic caregiver ! i love taking care of others, but it's not in a romantic way.. so it's different from what bubu is for me. i also don't enter any kind of "mind space" in this case !<br>
+<br>
+<br><br>
+now, about age play, ddlg / cgl .. there is a fine line between pedophilia and those kinks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
 i think the sex life between two adults, responsible for themselves, with consent, is something that allows things like kinks or lifestyles such as bdsm. any sub/dom relationship, have no relation whatsoever to incest or pedophilia. is something consented between two adults. anyway, it's a kink. in my opinion, kinks should in no way be publicly exposed, on the streets or on the internet, where children can see and be influenced. children can't have contact with these kind of things because it wouldn't be healthy.<br>
 this unfortunately is something that has happened very often, and even worse, added to age play : ddlg / cgl has reached many minors and many adult pedophiles have had contact with these children through kink communities.<br>
 these communities have become increasingly dangerous for minors, through the romanticization of pedophilia, child abuse and contact with kinks linked to childhood. even people who claim to be in a sfw ddlg / cgl community are not safe and are exposed to dangerous people as they use kink tags.<br>
@@ -4589,22 +4602,7 @@ communities of age regression that work hard to be a truly safe environment for 
 <br>
 i agree that it is really very dangerous to associate childhood with sexuality, even if those involved are adults, and i firmly believe that kinks shouldn't be publicly exposed for children to see. neither of them.<br>
 the only way to keep a kink safe and not harmful to anyone is without public exposure.<br>
-<br>
-　do i age regress ? am i part of a community ? am i in a relationship with a "caregiver" ?<br>
-<br>
-　❣ well, i don't think i really age regress, but i like doing some activities like coloring and making pillowforts... because it's just fun ♡<br>
-　❣ as i don't age regress, i am not part of any community. but i really like kidcore and age regression blogs, because they always make me feel so comfortable !<br>
-　❣ and, my bf, who i always call bubu ( boo boo, in case you don't know how to pronounce ) is not my caregiver, not in the agere way at least. but he takes good care of me, since i'm very sensitive and i get anxious about complicated "adult stuff", he always helps me a lot, he always makes me feel safe and i love him so much !!! ♡<br>
-<br>
-<br>
-before i finish here, i'd like to say something quick about melanie martinez. everyone knows that there is a direct connection with her and the children's exposure to the famous "daddy kink".<br>
-first of all, i would like to say that i particularly really like her instrumentals. but, i think her videos and lyrics a bit... dangerous. some of them are ok, but her most famous songs deal with trauma issues in a not very respectful way, and that really bothers me. i feel uncomfortable about it.<br>
-i don't know if she's personally into a kink, and i've never seen her directly exposing kinks to children, so i'm not "against her".<br>
-however, i know she's friend of <a title="[ 
-yungelita ]" id="linkbjinho">a person</a> who is completely disrespectful to children, who sexualises child abuse, necrophilia, suicide and many other things. i have nothing against melanie in particular, at least for today, but i think she shouldn't have contact with such toxic people.<br>
-<br>
-<br>
-i hope i have made things clear, since this subject is so controversial, it's difficult to write about it <img src="https://i.imgur.com/xwdYOki.gif"/><br>
+i hope i have made things clear, since this subject is so controversial, it's difficult to write about it<br>
 if i said something wrong, please let me know !<br>
 i'm open to suggestions, as always, so don't forget my email : <i>letters@middlepot.com</i><br>
 <br>
@@ -5129,7 +5127,6 @@ now, the word nymph, which is the abbreviation for nymphet :<br>
 so, as you can see, those words can be used without sexual connotation, but because of the other meanings, they become rather dangerous words. it is not safe to use them as tags for example, as they may attract bad people. you must be careful when using these terms, but it is possible, and it is not wrong. please, be careful ! <img src="https://i.imgur.com/oGcmE1L.gif"/><br><br>
 and as you already must be thinking, yes, there are some similar stuff and related subjects that i will talk about in future posts, because they are also very important :<br>
 　ddlg, age play & melanie martinez ;<br>
-　serial killer worshiping & nicole dollanganger ;<br>
 　self-diagnostic & trauma blogs ...<br><br>
 ( don't worry, i'm not going to be mean to anyone here, these are just interesting topics to talk about )
 <br><br>
