--- a/recommended.html
+++ b/recommended.html
@@ -309,8 +309,16 @@ z-index: 3;
 
 <center>
 
-<a href="https://bunnymilku.blogspot.com" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
-　<a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
+　<a href="https://lovelyxdoll.blogspot.com/" target="_blank"><img src="https://i.imgur.com/KDfAyiF.png"></a>
+　<a href="https://web.archive.org/web/20121020180143/http://cheerful.hacca.jp/" target="_blank"><img src="https://i.imgur.com/m4UM3W1.gif"></a>
+　<a href="https://web.archive.org/web/20130517212125/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/nmVTFnS.gif"></a>
+
+　<br><br><a href="https://web.archive.org/web/20090601221008/http://www5.pf-x.net/~car/" target="_blank"><img src="https://i.imgur.com/W97nIbu.gif"></a>
+　<a href="https://web.archive.org/web/20110716131740/http://hana.poche.jp/angel66l/index.html" target="_blank"><img src="https://i.imgur.com/kzCZCDf.gif"></a>
+　<a href="https://web.archive.org/web/20130501011051/http://sao-charin.babymilk.jp/" target="_blank"><img src="https://i.imgur.com/orHAzIJ.gif"></a>
+
+　<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
+　<a href="https://bunnymilku.blogspot.com/" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
 　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
 　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
@@ -327,7 +335,7 @@ z-index: 3;
 
 　<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
 　<a href="http://lame.xii.jp/lame/" target="_blank"><img src="https://i.imgur.com/zR8VqMT.png"></a>
-　<a href="https://web.archive.org/web/20100418035935/http://drikoti.net:80/" target="_blank"><img src="https://i.imgur.com/6gsVjjE.gif"></a>
+　<a href="https://web.archive.org/web/20100418035935/http://drikoti.net:80/" target="_blank"><img src="https://i.imgur.com/Z2vfmvm.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
 　　<a href="http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
