--- a/milkywoods.html
+++ b/milkywoods.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -272,9 +270,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -416,60 +412,60 @@ function getPosition(el) {
 
 <div style="float: left;">
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/><br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-　　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
 <br>
 <br>
-　　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br>
+　　　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br>
 </div>
 
 <div style="float: right;">
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br><br>
-<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　　
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br><br>
+<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　　
 <br>
 <br>
-　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　　<br>
+　<img src="https://i.imgur.com/3x03XGZ.gif"/>　　<br>
 </div>
 
 <div style="position:absolute; left:20%; right:20%;">
@@ -484,6 +480,9 @@ click to play !
 <br><br>
 <table style="border-spacing: 5px;">
 <tr>
+<center><a href="/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/OCtL8fg.png"/></a></center>
+</tr>
+<tr>
 <td><a href="/tinykittens"><img height="auto" width="100" src="https://i.imgur.com/hsu8YwY.png"/></a> </td>
 <td><a href="/bunnyshop"><img height="auto" width="100" src="https://i.imgur.com/Beri781.gif"/></a> </td>
 </tr>
@@ -495,13 +494,9 @@ click to play !
 <td><a href="/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
 <td><a href="/drawing"><img height="auto" width="100" src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
 </tr>
-<tr>
-<td><a href="/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/T9HOVZQ.png"/></a> </td>
-<td></td>
-</tr>
 </table>
 
-<br><br>
+<br>
 
 <img src="https://i.imgur.com/k7NxBbW.gif"/>
 
