--- a/jumpjump.html
+++ b/jumpjump.html
@@ -299,7 +299,7 @@ z-index: 3;
 <br><br>
 <br>
 <center>
-<object width="400" height="267"><param value="https://files.catbox.moe/up4thg.swf" name="movie"/><param value="high" name="quality"/><embed width="400" height="267" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/up4thg.swf"></embed></object>
+<object width="400" height="267"><param value="https://files.catbox.moe/i1ntb1.swf" name="movie"/><param value="high" name="quality"/><embed width="400" height="267" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/up4thg.swf"></embed></object>
 
 
 <br><br>
