--- a/blog.html
+++ b/blog.html
@@ -294,15 +294,6 @@ z-index: 3;
 <div id="stuff">
 
 <br><br>
-<div style="float:left; position: absolute; left: 30%;"><img src="https://i.imgur.com/bt65A5Z.gif"></div><br><br><br>
-<div style="float:right; position: absolute; left: 55%;"><center><img src="https://i.imgur.com/OeM3VoO.png"></center><br>
-<center><textarea style="height:9px; width:50px;  border:1px dotted #e2d5d0; -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/AgXOBtX.png); font-size:8px; font-family:Verdana; COLOR: #b29487"><a href="https://middlepot.com/blog"><img src="https://i.imgur.com/OeM3VoO.png"></a></textarea>
-</center>
-</div>
-<br><br><br><br><br><br><br><br><br><br>
 
 <style>
 #coisinhos {
@@ -316,6 +307,93 @@ font-family: Verdana;
  }
 </style>
 <div id="coisinhos">
+
+<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>september . 19 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <sub><img src="https://i.imgur.com/KIxCSYI.png"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+finally, i got in a balanced mood while i can be productive but also rest properly <sub><img src="https://i.imgur.com/TaK2n61.gif"/></sub>
+this is such a relief because i've got to start and finish some personal projects, made new things for the shy bunny store + got enough sleep, chatted with friends, didn't felt super anxious.. !!
+i hope i can keep it like this for a long time because i'm feeling so much joy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i've also become more active on my accounts, making content and being interactive !
+( careful not to get overwhelmed !! - i gotta keep reminding myself, always )
+i finally started using the "close friends" function of instagram in a more organized way now : while i post self care reminders for everyone i always have some more personal stuff to share with my mutuals ( like venting or showing my self improvement )
+i believe this is quite related to the acc purpose for it can motivate others to overcome their own troubles, but i'm just too shy to post it for all of my followers so i keep the public content more impersonal <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+it's a little hard to be productive while respecting my schedule, but i got it pretty well these last weeks <sub><img src="https://i.imgur.com/lbIAx2D.gif"/></sub>
+i know it's a good phase and phases come and go,, but i do feel proud of myself for having good phases just as often as the bad ones .. actually, these bad phases are not even bad, i just have a hard time accepting that i deserve ( and need ) to chill and be lazy sometimes ; ;
+one day, i know, i will love myself the way i deserve <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+now changing subjects , after receiving many requests of mutuals, i decided to share my line acc in my links page !!
+i made a new one, with a very cute id ( @pomf ) and i'm happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+while discord is my fav app for group chat ( because of all the features & bots ) line is actually my fav for private messages,, it's the app i use for talking with bubu and we even have matching pfp there <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+as you already know i love collecting line themes, stickers & emojis.. i use this app for some years now and i really like it, so i would like to add more friends there <sub><img src="https://i.imgur.com/4oQuNAB.gif"/></sub>
+i think discord private messages are really boring - just like line groups are boring - so for me both complement each other perfectly !!
+of course i use any chat in any account i have for talking with people, if they prefer like this, but i do have my own preferences ..
+
+soo, lately i've been doing a cleaning in my wardrobe, then i realized i only use 1/3 of my clothes..
+most of it was basic clothes from when i was a teenager and wasn't sure of my style yet, i was keeping these there just because LOL
+i gave most of it to friends and my younger cousins, but some of these were actually cute and has potential !!
+now that i can sew, i tried renewing these and make them perfect for me again : i fixed them, added lace, ribbons & details <font color="#d3a5a5" style="font-size:11px;">♡</font>
+now i have a lot of cute "new" clothes that i'm very excited to try out !!!
+i also have been sewing some, and bought some others from thrift stores,, so i'm completely satisfied.
+i never had so many cute clothing before !!
+i'm gonna show you one of my favorite outfits :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/yZDQncB.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+isn't it absolutely precious ? 
+the little apron is just.. too cute ; ;
+( i also made a "full body" apron with the same fabric and lace but it's actually for using in a practical way, not as accessory )
+
+now, i have a collage that i made recently and wanted to show you :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/zigfoTh.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/sq23v3.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">fairy garden html .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's a "fairycore" one i made for mother nature.. i love her so much <sub><img src="https://i.imgur.com/W50nV00.gif"/></sub>
+this is such an inspiration for me, and i aim to be in contact with nature more and more each day <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i also have this melody that complements the theme :</pre><br>
+<br><br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/rbrsbd.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">secret kingdom .mp3</font></a>　
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think it's very beautiful, i'm proud of it ..
+
+for today, that's it !! i talked a lot already so it's time to go...
+thank you a lot for always giving me so much love & support <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+xoxo <sub><img src="https://i.imgur.com/rVjHzUD.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
+
+<br><br><br>
 
 <center><img src="https://i.imgur.com/auVtubS.png"/></center>
 <br><br>
@@ -421,68 +499,6 @@ xoxo <img src="https://i.imgur.com/hhsqaw6.gif"/></pre><br>
 <br>
 
 <center><img src="https://i.imgur.com/g1WEZen.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>june . 28 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <img src="https://i.imgur.com/7IFnyqV.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-the shy bunny store is finally open worldwide ♡ !!!
-( please check it out on shybunny.middlepot.com )
-i've worked so hard for it to happen.. and it's been worth it already, i'm proud of myself !
-i'm in very berry productive phase now, as expected.. i knew it <img src="https://i.imgur.com/z2UgQA2.gif"/>
-i sewed a lot of stuff, made lots of cute new items for the store and i want to make even more this next month.
-also, i made my first clothing ♡♡
-it's a lovely dress.. i also made a cute bow headdress i'll use with it !!
-so yes, if i use these + the frilly socks i made : it's a full outfit made 100% by myself
-you have no idea how much it means to me.. i'm really happy !
-look at these :</pre><br>
-<br><br>
-
-<center><img width="370px" height="auto" src="https://i.imgur.com/m0wfTHC.jpg"/></center><br><br>
-<center><img width="370px" height="auto" src="https://i.imgur.com/taO9vbZ.jpg"/></center><br>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it's so pretty.. ///
-i'm going to make more outfits soon, and as soon as i make a little more money and buy more fabric i'll surely put some clothing on the store !!
-( i also want to make some cute bags )
-
-about my instagram acc.. in addiction to my "self care calendar" idea i showed you before, i made some other templates for daily track & planning !
-i want to start using these frequently now in my phone, every morning, since it's the time of the day i check my apps.
-i was trying to keep these things "physically" but it sadly turned out a little messy <img src="https://i.imgur.com/j3bQf3u.gif"/>
-i think i'm not very good with planners, even though i love stationery stuff .. i always want to make everything to look perfect so it becomes easily stressful and time consuming ///
-these virtual templates will be very useful for me, so now it's not just something i do for helping others but also myself.. !
-i will not post my personal lists in public since my acc is focused on self care posts only, but as always , i'll share some of these with close friends ♡
-
-sooo.. about the q&a, i actually don't have any interesting subject to write about this time ;  ;
-usually the requests i receive are self care related, but i will try to explain how i keep my writing organized :
-
-　♡　i write texts about specific topics on /blog
-　♡　i write tips about daily problems on /help
-　♡　i write self care reminders on my ig acc
-
-i've been receiving requests that would fit into the help page and ig acc , but not on the blog...
-i will surely write more q&a texts once i get an interesting topic request !
-and, it doesn't have to be self care related, i write about life in general, if it's something i want to express my opinion about.. !
-
-i hope i haven't disappointed you .. i've been posting a lot in other places so please check them out //
-
-xoxo <img src="https://i.imgur.com/v8YK4Yq.gif"/></pre><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
 
 <br><br><br>
 
