--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,70 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>june . 28 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/7IFnyqV.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the shy bunny store is finally open worldwide ♡ !!!
+( please check it out on shybunny.middlepot.com )
+i've worked so hard for it to happen.. and it's been worth it already, i'm proud of myself !
+i'm in very berry productive phase now, as expected.. i knew it <img src="https://i.imgur.com/z2UgQA2.gif"/>
+i sewed a lot of stuff, made lots of cute new items for the store and i want to make even more this next month.
+also, i made my first clothing ♡♡
+it's a lovely dress.. i also made a cute bow headdress i'll use with it !!
+so yes, if i use these + the frilly socks i made : it's a full outfit made 100% by myself
+you have no idea how much it means to me.. i'm really happy !
+look at these :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/m0wfTHC.jpg"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/taO9vbZ.jpg"/></center><br>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's so pretty.. ///
+i'm going to make more outfits soon, and as soon as i make a little more money and buy more fabric i'll surely put some clothing on the store !!
+( i also want to make some cute bags )
+
+about my instagram acc.. in addiction to my "self care calendar" idea i showed you before, i made some other templates for daily track & planning !
+i want to start using these frequently now in my phone, every morning, since it's the time of the day i check my apps.
+i was trying to keep these things "physically" but it sadly turned out a little messy <img src="https://i.imgur.com/j3bQf3u.gif"/>
+i think i'm not very good with planners, even though i love stationery stuff .. i always want to make everything to look perfect so it becomes easily stressful and time consuming ///
+these virtual templates will be very useful for me, so now it's not just something i do for helping others but also myself.. !
+i will not post my personal lists in public since my acc is focused on self care posts only, but as always , i'll share some of these with close friends ♡
+
+sooo.. about the q&a, i actually don't have any interesting subject to write about this time ;  ;
+usually the requests i receive are self care related, but i will try to explain how i keep my writing organized :
+
+　♡　i write texts about specific topics on /blog
+　♡　i write tips about daily problems on /help
+　♡　i write self care reminders on my ig acc
+
+i've been receiving requests that would fit into the help page and ig acc , but not on the blog...
+i will surely write more q&a texts once i get an interesting topic request !
+and, it doesn't have to be self care related, i write about life in general, if it's something i want to express my opinion about.. !
+
+i hope i haven't disappointed you .. i've been posting a lot in other places so please check them out //
+
+xoxo <img src="https://i.imgur.com/v8YK4Yq.gif"/></pre><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
