--- a/recommended.html
+++ b/recommended.html
@@ -359,8 +359,9 @@ z-index: 3;
 
 <br><br><br>
 <font color="#ADA49C"><center><img src="https://i.imgur.com/sBg6LRN.gif"> how to have your site / blog here <img src="https://i.imgur.com/sBg6LRN.gif"></center><br><br></font><font color="#C7BCA7">
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it should have a cute aesthetic and be sfw ;<br>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it must have a cute aesthetic and be sfw ;<br>
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　send me your button, it should be 88 x 31 px ;<br>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　if you want my buttons, ask me on contact page ;<br>
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　i give preference to sites that have their own domain !
 <br><br>
 　<b>( i also keep here some precious sites from the web.archive )</b><br><br><br></font>
