--- a/status.html
+++ b/status.html
@@ -322,6 +322,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>19.09.19</sup></font> <font color="#d8abab">→</font>　be patient with me, please
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>03.09.19</sup></font> <font color="#bea5ce">→</font>　waa don't leave me behind !!!
 
 <br><br><br>
@@ -347,9 +350,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>02.14.19</sup></font> <font color="#9cb7b7">→</font>　♡ ♡ hug me ♡ ♡
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>02.08.19</sup></font> <font color="#d8abab">→</font>　light hearted , softer.
 
 
 
