--- a/portfolio.html
+++ b/portfolio.html
@@ -415,9 +415,9 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="300px" height="auto" src="https://i.imgur.com/w5BQZ4h.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/gInirWP.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/zqHB2w1.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/euoPTCp.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/n9s1YN3.png">
+<img width="300px" height="auto" src="https://i.imgur.com/HZseZ4b.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
