--- a/poofties.html
+++ b/poofties.html
@@ -427,7 +427,7 @@ in this world i received the "middlepot" (sur)name, but i'm usually called "puf"
 <br>
 in this page you can ..<br><br></font>
 <sub><sub><img src="https://i.imgur.com/u4wRgUy.gif"/></sub></sub>　<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">read random texts</a></font><br><br>
-<a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play flash games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br>
+<a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play little games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br>
 
 <br><br>
 
