--- a/recommended.html
+++ b/recommended.html
@@ -296,13 +296,13 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/wMsipwd.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/128GGRC.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
-<div style="width: 700px;height: 50px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"><img src="https://i.imgur.com/NbEML83.png"></div>
+<div style="width: 700px;height: 50px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"></div>
 <div style= "padding-left: 25%; padding-right: 25%;">
 
-<center><img src="https://i.imgur.com/Bs2GuOb.png"><br><br>
-<font color="#DB9999">this is my little archive for sites & blogs i recommend</font></center>
+<center><img src="https://i.imgur.com/nkf9kRv.gif"><br><br>
+<font color="#a19489">this is my little archive for sites & blogs i recommend</font></center>
 <br><br><br>
 
 <div style="line-height:6px;">
@@ -358,14 +358,12 @@ z-index: 3;
 </div>
 
 <br><br><br>
-<font color="#ADA49C"><center><img src="https://i.imgur.com/sBg6LRN.gif"> how to have your site / blog here <img src="https://i.imgur.com/sBg6LRN.gif"></center><br><br></font><font color="#C7BCA7">
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it must have a cute aesthetic and be sfw ;<br>
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　send me your button, it should be 88 x 31 px ;<br>
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　if you want my buttons, ask me on contact page ;<br>
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　i give preference to sites that have their own domain !
+<font color="#ADA49C"><center><sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub>　how to have your site / blog here　<sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub></center><br><br></font><font color="#C7BCA7">
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must have a cute aesthetic and be sfw ;<br>
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　send me your button, it should be 88 x 31 px ;<br>
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　if you want my button, ask me on contact page ;
 <br><br>
-　<b>( i also keep here some precious sites from the web.archive )</b><br><br><br></font>
-<center><img height="auto" width="200px" src="https://i.imgur.com/wuxor4Q.gif"></center>
+　<b>( i also keep here some precious inactive sites from the web.archive )</b><br><br></font>
 </div>
 <br><br>
 
