--- a/recommended.html
+++ b/recommended.html
@@ -363,7 +363,7 @@ z-index: 3;
 　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　send me your button, it should be 88 x 31 px ;<br>
 　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　if you want my button, ask me on contact page ;
 <br><br>
-　<b>( i also keep here some precious inactive sites from the web.archive )</b><br><br></font>
+　<b>( i also keep here precious inactive sites from web.archive )</b><br><br></font>
 </div>
 <br><br>
 
