--- a/recommended.html
+++ b/recommended.html
@@ -296,7 +296,7 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="background-image:url(https://i.imgur.com/128GGRC.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
+<div style="background-image:url(https://i.imgur.com/TBSB8fr.png); background-attachment: fixed; width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:8px; line-height: 10px">
 
 <div style="width: 700px;height: 50px;overflow-x: hidden; overflow-y: hidden;"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"><img src="https://i.imgur.com/evgRpPG.png"></div>
 <div style= "padding-left: 25%; padding-right: 25%;">
