--- a/recommended.html
+++ b/recommended.html
@@ -303,11 +303,14 @@ z-index: 3;
 
 <center><img src="https://i.imgur.com/nkf9kRv.gif"><br><br>
 <font color="#a19489">this is my little archive for sites & blogs i recommend</font></center>
-<br><br><br>
+<br><br>
 
 <div style="line-height:6px;">
 
 <center>
+
+<font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
+<br><br><br>
 
 　<a href="https://lovelyxdoll.blogspot.com/" target="_blank"><img src="https://i.imgur.com/KDfAyiF.png"></a>
 　<a href="https://web.archive.org/web/20121020180143/http://cheerful.hacca.jp/" target="_blank"><img src="https://i.imgur.com/m4UM3W1.gif"></a>
@@ -357,13 +360,25 @@ z-index: 3;
 
 </div>
 
-<br><br><br>
+<br><br>
+<center>
+<font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
+</center>
+<br>
+
 <font color="#ADA49C"><center><sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub>　how to have your site / blog here　<sub><img src="https://i.imgur.com/sBg6LRN.gif"></sub></center><br><br></font><font color="#C7BCA7">
 　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must have a cute aesthetic and be sfw ;<br>
 　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　send me your button, it should be 88 x 31 px ;<br>
-　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　if you want my button, ask me on contact page ;
-<br><br>
-　<b>( i also keep here precious inactive sites from web.archive )</b><br><br></font>
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here precious inactive sites from web.archive ;<br>
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　if you want to recommend me, please contact me ;<br>
+　　　　<font style="color: #e3baba; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　my button :<br><br>
+</font>
+<center><img src="https://i.imgur.com/Ch6lcCd.png"></center><br>
+<center><textarea style="height:12px; width:55px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/X3UbTE7.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com"><img src="https://i.imgur.com/Ch6lcCd.png"></a></textarea>
+</center><br>
 </div>
 <br><br>
 
